<resources>
    <string name="app_name">News Feed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verge">Verge</string>
    <string name="wired">Wired</string>
    <string name="the_hindu">The Hindu</string>
    <string name="espn">ESPN</string>
    <string name="reddit">Reddit</string>
    <string name="the_next_web">The Next Web</string>
    <string name="engadget">Engadget</string>
    <string name="new_scientist">New Scientist</string>
    <string name="techcrunch">Techcrunch</string>
    <string name="error_in_loading">Error in loading</string>
    <string name="detail">detail</string>
    <string name="title">Title</string>
    <string name="news_detail">News Detail</string>
    <string name="news_title">News Title</string>
    <string name="verge_domain">theverge.com</string>
    <string name="wired_domain">wired.com</string>
    <string name="techcrunch_domain">techcrunch.com</string>
    <string name="the_hindu_domain">thehindu.com</string>
    <string name="reddit_domain">reddit.com</string>
    <string name="espn_domain">espncricinfo.com</string>
    <string name="the_next_web_domain">thenextweb.com</string>
    <string name="new_scientist_domain">newscientist.com</string>
    <string name="engadget_domain">engadget.com</string>
    <string name="news_api_key">4663b6001744472eaac1f5aa16076a7a</string>
</resources>
